--- a/style.css
+++ b/style.css
@@ -146,35 +146,25 @@ a:hover {
   position: fixed;
   top: 0;
   right: 0;
-  background-color: var(--background-color);
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
   width: 70%;
   height: 100%;
-  display:block;
-  flex-direction: column;
-  padding: 1rem;
-  gap: 1.5rem;
+  background-color: var(--background-color);
   box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2);
+  /* и т.д. */
 }
 
-.menu-links a {
-  display: block;
-  padding: 10px;
-  text-align: center;
-  font-size: 1.5rem;
-  color: black;
-  text-decoration: none;
-  transition: all 0.3 ease-in-out;
- 
+.menu-links.open {
+  transform: translateX(0);
 }
+
 
 .menu-links li {
   list-style: none;
 }
 
-.menu-links.open {
-  max-height: 300px;
-  transform: translateX(0);
-}
+
 
 .hamburger-icon.open span:first-child {
   transform: rotate(45deg) translate(10px, 5px);
