--- a/style.css
+++ b/style.css
@@ -142,18 +142,32 @@ a:hover {
   transition: all 0.3 ease-in-out;
 }
 
+
+
 .menu-links {
   position: fixed;
   top: 0;
   right: 0;
+ 
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
+
+
   width: 70%;
   height: 100%;
   background-color: var(--background-color);
   box-shadow: -4px 0 10px rgba(0, 0, 0, 0.2);
-  /* и т.д. */
+
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 2rem;             
+  gap: 1rem;                 
+  z-index: 999;            
 }
+
 
 .menu-links.open {
   transform: translateX(0);
@@ -162,6 +176,7 @@ a:hover {
 
 .menu-links li {
   list-style: none;
+  margin: 0.5rem 0;
 }
 
 
